<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_search_and_filter"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin_start_10"
            android:paddingEnd="@dimen/default_margin_end_10"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipQualityMark"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/quality_sign"
                android:textAppearance="@style/TextAppearance.App.Chip"
                android:textColor="@color/chip_selector"
                app:chipBackgroundColor="@drawable/bg_chip_selector"
                app:chipCornerRadius="@dimen/card_corner_radius_15"
                app:chipStrokeColor="@color/blue_light"
                app:chipStrokeWidth="@dimen/chip_stroke_width" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipProductViolation"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/product_with_violent"
                android:textAppearance="@style/TextAppearance.App.Chip"
                android:textColor="@color/chip_selector"
                app:chipBackgroundColor="@drawable/bg_chip_selector"
                app:chipCornerRadius="@dimen/card_corner_radius_15"
                app:chipStrokeColor="@color/blue_light"
                app:chipStrokeWidth="@dimen/chip_stroke_width" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/bgDividerColor" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvResearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/default_margin_5"
            android:paddingBottom="@dimen/default_margin_5" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty_products"
            android:visibility="gone" />

    </LinearLayout>

    <include
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>